# vehicle_mounted_system

./: README.md
build-weather-Qt_6_5_3_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-weather-Qt_6_5_3_for_macOS-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-b13a86b62ee2c5a79d19.json  codemodel-v2-6472e9f13f9ad52d06b1.json  index-2024-05-28T16-27-51-0640.json  target-MainProject-Debug-649f55526028cdfd16ee.json  target-MainProject_autogen_timestamp_deps-Debug-8b4b3953797e3d678b39.json  target-MainProject_qmlimportscan-Debug-ae98dd47f3036890eb84.json
build-weather-Qt_6_5_3_for_macOS-Debug/.cmake/api/v1/reply.prev/: cache-v2-d1f6c98e1823d1c821c1.json  codemodel-v2-07b86635800eecaf6016.json  directory-.-Debug-3582aadca2e605470d5b.json  index-2024-05-28T16-11-24-0318.json  target-MainProject-Debug-629de4241c74cd4138d2.json  target-MainProject_autogen-Debug-5f5edb964909ff7abc57.json
build-weather-Qt_6_5_3_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-weather-Qt_6_5_3_for_macOS-Debug/.qt/deploy_qml_imports/: MainProject.cmake
build-weather-Qt_6_5_3_for_macOS-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_MainProject.rsp
build-weather-Qt_6_5_3_for_macOS-Debug/MainProject.app/Contents/: Info.plist
build-weather-Qt_6_5_3_for_macOS-Debug/MainProject_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-weather-Qt_6_5_3_for_macOS-Debug/MainProject_autogen/7LE2UKLBIH/: moc_remotecontrol.cpp  moc_remotecontrol.cpp.d  moc_remoteview.cpp  moc_remoteview.cpp.d
build-weather-Qt_6_5_3_for_macOS-Debug/MainProject_autogen/EWIEGA46WW/: moc_controlwidget.cpp  moc_controlwidget.cpp.d  moc_currentsituation.cpp  moc_currentsituation.cpp.d  moc_http.cpp  moc_http.cpp.d  moc_mainwidget.cpp  moc_mainwidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_mqttlink.cpp  moc_mqttlink.cpp.d  moc_record.cpp  moc_record.cpp.d  moc_specch.cpp  moc_specch.cpp.d  qrc_mainpage.cpp  qrc_remoteRes.cpp
build-weather-Qt_6_5_3_for_macOS-Debug/MainProject_autogen/include/: ui_controlwidget.h  ui_mainwidget.h  ui_mainwindow.h  ui_remoteview.h
build-weather-Qt_6_5_3_for_macOS-Debug/MyMqttTest.app/Contents/: Info.plist
build-weather-Qt_6_8_0_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-weather-Qt_6_8_0_for_macOS-Debug/.cmake/api/v1/reply.prev/: cache-v2-7ae1c3d3ac59b35b65de.json  codemodel-v2-2332cef3aa0d0507caf8.json  codemodel-v2-2a302ae5432170d66f6e.json  codemodel-v2-37ba7ef6c5a0f728dff8.json  codemodel-v2-6177aa99e72b00705efa.json  codemodel-v2-a0f13c8581a5b8972d78.json  codemodel-v2-b7b553506a86c173db64.json  directory-.-Debug-3d00d9a5133a91885eeb.json  directory-.-Debug-3e09ebdb76e9286035a8.json  directory-.-Debug-6eedffef9b33caa6b768.json  directory-.-Debug-9665d3f199836641c16b.json  index-2024-04-13T18-28-52-0515.json  index-2024-04-14T06-20-30-0034.json  index-2024-04-15T06-08-10-0404.json  index-2024-04-15T14-17-49-0314.json  index-2024-04-16T14-18-52-0179.json  index-2024-04-18T15-51-02-0911.json  target-MainProject-Debug-02618e9c77556577bc34.json  target-MainProject-Debug-17c781d1e9c55ccc25a8.json  (+8 more)
build-weather-Qt_6_8_0_for_macOS-Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-weather-Qt_6_8_0_for_macOS-Debug/MainProject.app/Contents/MacOS/: MainProject
build-weather-Qt_6_8_0_for_macOS-Debug/MainProject_autogen/: deps  mocs_compilation.cpp
build-weather-Qt_6_8_0_for_macOS-Debug/MainProject_autogen/EWIEGA46WW/: moc_controlwidget.cpp  moc_controlwidget.cpp.d  moc_currentsituation.cpp.d  moc_http.cpp  moc_http.cpp.d  moc_mainwidget.cpp  moc_mainwidget.cpp.d  moc_mainwindow.cpp.d  moc_mqttlink.cpp  moc_mqttlink.cpp.d  qrc_control.cpp  qrc_mainpage.cpp
build-weather-Qt_6_8_0_for_macOS-Debug/MainProject_autogen/include/: ui_controlwidget.h  ui_mainwidget.h  ui_mainwindow.h
build-weather-Qt_6_8_0_for_macOS-Debug/MyMqttTest.app/Contents/: Info.plist
build-weather-Qt_6_8_0_for_macOS-Debug/MyMqttTest.app/Contents/MacOS/: MyMqttTest
build-weather-Qt_6_8_0_for_macOS-Debug/MyMqttTest_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-weather-Qt_6_8_0_for_macOS-Debug/MyMqttTest_autogen/EWIEGA46WW/: moc_currentsituation.cpp  moc_currentsituation.cpp.d  moc_mainwidget.cpp  moc_mainwidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_main.cpp
build-weather-Qt_6_8_0_for_macOS-Debug/MyMqttTest_autogen/include/: ui_currentsituation.h  ui_mainwidget.h
build-weather-Qt_6_8_0_for_macOS-Debug/weather.app/Contents/: Info.plist
build-weather-Qt_6_8_0_for_macOS-Debug/weather.app/Contents/MacOS/: weather
build-weather-Qt_6_8_0_for_macOS-Debug/weather_autogen/: deps  moc_predefs.h
build-weather-Qt_6_8_0_for_macOS-Debug/weather_autogen/EWIEGA46WW/: moc_currentsituation.cpp  moc_currentsituation.cpp.d  moc_mainwidget.cpp  moc_mainwidget.cpp.d  moc_mainwindow.cpp.d
build-weather-Qt_6_8_0_for_macOS-Debug/weather_autogen/include/: ui_currentsituation.h  ui_mainwidget.h  ui_mainwindow.h
weather/: CMakeLists.txt  Info.plist.in  battery.cpp  battery.h  battery.ui  control.qrc  controlwidget.cpp  controlwidget.h  controlwidget.ui  currentsituation.cpp  currentsituation.h  currentsituation.ui  http.cpp  http.h  lyriclist.h  main.cpp  main.qrc  mainpage.qrc  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mqttlink.cpp  mqttlink.h  musicrotate.cpp  musicrotate.h  musicrotate.ui  musicwidget.cpp  musicwidget.h  musicwidget.ui  playlist.cpp  playlist.h  record.cpp  record.h  remoteRes.qrc  specch.cpp  specch.h  sysdatatype.h  (+6 more)
weather/musicPlayer/: musicPlayer.qrc
weather/musicPlayer/image/: image.qrc
weather/musicPlayer/testMusic/: freeloop.lrc  lovestory.lrc  oneday.lrc  seeyougain.lrc
weather/opencvServer/: opencvWindow.cpp  opencvWindow.h  opencvWindow.ui  qfaceobject.cpp  qfaceobject.h  registerwin.cpp  registerwin.h  registerwin.ui  selectwin.cpp  selectwin.h  selectwin.ui
weather/remote/: remotecontrol.cpp  remotecontrol.h  remotecontrol.ui  remoteview.cpp  remoteview.h  remoteview.ui
(+30 files in other folders)
